<resources>
    <string name="app_name">HostelManagementSystem</string>
    <string name="start">Automatic Identity Verification which enables you to verify your identity</string>
    <string name="Welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="desc">Back</string>
    <string name="stat">State</string>
    <string name="lAccount">Login to your Account</string>
    <string name="Aadmin">Login as Administration</string>
    <string name="email">Email</string>
    <string name="usernoacc">Account Not Provided? Inform Warden</string>
    <string name="askWarden"> Inform Warden</string>
    <string name="eExample">example@mail.com</string>
    <string name="pExample">Password@123</string>
    <string name="password">Password</string>
    <string name="noAccount">Not yet created an Account?</string>
    <string name="signUp">    Ask Coordinator</string>
    <string name="username">Name</string>
    <string name="userid">Userid</string>
    <string name="mobileNo">Contact Number</string>
    <string name="AadharNo">Aadhar Number</string>
    <string name="subject">Subject</string>
    <string name="newAdd">New Admission</string>
    <string name="school">School</string>
    <string name="qualifications">Qualifications</string>
    <string name="user">User</string>
    <string name="admin">Administration</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="joiningDate">Joining Date</string>
    <string name="estimatedDateOfLeaving">Expected Leaving Date</string>
    <string name="register">Register</string>
    <string name="create">Create Account</string>
    <string name="createAcc">Create an Account</string>
    <string name="attendance">Student Attendance</string>
    <string name="studentDetails">Student Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>