<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">

    <ImageView
        android:layout_width="405dp"
        android:layout_height="209dp"
        android:src="@mipmap/backgrnd"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent="0.27"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.78"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_pager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="524dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabPager">

            <TextView
                android:id="@+id/adminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="10sp"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newAdminName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:ems="10"
                android:hint="Full Name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/adminEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20sp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newAdminEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:ems="10"
                android:hint="abc@xyz.com"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/adminBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20sp"
                android:text="Birth Date"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newAdminDOB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:ems="10"
                android:hint="DD-MM-YYYY"
                android:inputType="date" />

            <TextView
                android:id="@+id/adminPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20sp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newAdminPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30sp"
                android:ems="10"
                android:hint="@string/pExample"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/newAdminRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/button"
                android:padding="18dp"
                android:text="@string/register"
                android:textColor="#000000"
                app:backgroundTint="@color/signUpButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>