<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4CFEC"
    tools:context=".adminHomePage">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/navbar_admin"
        app:layout_constraintVertical_bias="0"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:background="@drawable/view_pager"
        app:layout_constraintVertical_bias="0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:background="#cbeef2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/newAddmission"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00CA6C6C"
                android:src="@mipmap/adduser" />

            <TextView
                android:id="@+id/newAddtxt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/newAddmission"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20dp"
                android:text="@string/newAdd"
                android:textColor="#3585f9"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/userDetails"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newAddtxt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="#00732828"
                android:src="@mipmap/multipleusers" />

            <TextView
                android:id="@+id/userDet"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/userDetails"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-5dp"
                android:text="@string/studentDetails"
                android:textColor="#3585f9"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/studentAttendance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/userDet"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="#00875252"
                android:src="@mipmap/calendar" />

            <TextView
                android:id="@+id/stdAtt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/studentAttendance"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-35dp"
                android:text="@string/attendance"
                android:textColor="#3585f9"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>